@@ -51,8 +51,8 @@ public abstract class TechAddRemove extends TechSubcommandData {
         parseParameter(event, player, event.getOption(Constants.TECH3));
         parseParameter(event, player, event.getOption(Constants.TECH4));
 
-        CommanderUnlockCheck.checkPlayer(player, game, "nekro", event);
-        CommanderUnlockCheck.checkPlayer(player, game, "jolnar", event);
+        CommanderUnlockCheck.checkPlayer(player, "nekro", "jolnar");
+
     }
 
     private void parseParameter(SlashCommandInteractionEvent event, Player player, OptionMapping techOption) {
@@ -71,7 +71,7 @@ public abstract class TechAddRemove extends TechSubcommandData {
                     MessageHelper.sendMessageToEventChannel(event, "More that one matching Tech found");
                     return;
                 }
-                doAction(player, possibleTechs.get(0), event);
+                doAction(player, possibleTechs.getFirst(), event);
 
             }
         }
