@@ -1,5 +1,9 @@
 package ti4.draft.items;
 
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import ti4.draft.DraftItem;
 import ti4.generator.Mapper;
@@ -7,10 +11,6 @@ import ti4.helpers.Emojis;
 import ti4.model.DraftErrataModel;
 import ti4.model.FactionModel;
 import ti4.model.UnitModel;
-
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
 
 public class FlagshipDraftItem extends DraftItem {
     public FlagshipDraftItem(String itemId) {
@@ -83,7 +83,7 @@ public class FlagshipDraftItem extends DraftItem {
         for (FactionModel faction : factions) {
             var units = faction.getUnits();
             units.removeIf((String unit) -> !"flagship".equals(allUnits.get(unit).getBaseType()));
-            allItems.add(DraftItem.Generate(Category.FLAGSHIP, units.get(0)));
+            allItems.add(DraftItem.Generate(Category.FLAGSHIP, units.getFirst()));
         }
         return allItems;
     }
