@@ -88,9 +88,12 @@ import ti4.model.PlanetModel;
 import ti4.model.PlanetTypeModel.PlanetType;
 import ti4.model.PromissoryNoteModel;
 import ti4.model.RelicModel;
+import ti4.model.ShipPositionModel.ShipPosition;
 import ti4.model.StrategyCardModel;
 import ti4.model.TechnologyModel;
 import ti4.model.UnitModel;
+
+import static ti4.helpers.ImageHelper.writeCompressedFormat;
 
 public class MapGenerator {
 
@@ -264,8 +267,7 @@ public class MapGenerator {
     }
 
     public static void saveImageToWebsiteOnly(Game game, @Nullable GenericInteractionCreateEvent event) {
-        if (GlobalSettings.getSetting(GlobalSettings.ImplementedSettings.UPLOAD_DATA_TO_WEB_SERVER.toString(),
-            Boolean.class, false)) {
+        if (GlobalSettings.getSetting(GlobalSettings.ImplementedSettings.UPLOAD_DATA_TO_WEB_SERVER.toString(), Boolean.class, false)) {
             saveImage(game, null, event, false);
         }
     }
@@ -291,7 +293,7 @@ public class MapGenerator {
 
         drawGame(event);
         AsyncTI4DiscordBot.THREAD_POOL.submit(() -> sendToWebsite(event));
-        FileUpload fileUpload = uploadToDiscord();
+        FileUpload fileUpload = createFileUpload();
         logDebug(event);
         return fileUpload;
     }
@@ -435,51 +437,37 @@ public class MapGenerator {
         }
     }
 
-    private FileUpload uploadToDiscord() {
+    private FileUpload createFileUpload() {
         if (!uploadToDiscord) return null;
         if (debug) debugStartTime = System.nanoTime();
-        switch (displayType) {
-            case wormholes:
-            case anomalies:
-            case legendaries:
-            case empties:
-            case aetherstream:
-            case spacecannon:
-            case traits:
-            case techskips:
-            case attachments:
-            case shipless:
-            case landscape:
-        }
 
-        FileUpload fileUpload = uploadToDiscord(mainImage, game.getName());
+        FileUpload fileUpload = createFileUpload(mainImage, .2f, game.getName());
 
         if (debug) debugDiscordTime = System.nanoTime() - debugStartTime;
         return fileUpload;
     }
 
-    public static FileUpload uploadToDiscord(BufferedImage imageToUpload, String filenamePrefix) {
-        return uploadToDiscord(imageToUpload, filenamePrefix, false);
-    }
-
-    public static FileUpload uploadToDiscord(BufferedImage imageToUpload, String filenamePrefix, boolean saveLocalCopy) {
+    public static FileUpload createFileUpload(BufferedImage imageToUpload, float compressionQuality, String filenamePrefix) {
         if (imageToUpload == null) return null;
 
-        if (saveLocalCopy) {
+        String saveLocalFormat = System.getenv("SAVE_LOCAL_FORMAT");
+        if (saveLocalFormat != null) {
             try {
-                File file = new File(filenamePrefix + ".webp");
-                ImageIO.write(imageToUpload, "webp", file);
+                File file = new File(filenamePrefix + "." + saveLocalFormat);
+                ImageIO.write(imageToUpload, saveLocalFormat, file);
             } catch (IOException e) {
-                BotLogger.log("Could not create File for " + filenamePrefix + ".webp", e);
+                BotLogger.log("Could not create File for " + filenamePrefix + "." + saveLocalFormat, e);
             }
         }
 
         FileUpload fileUpload = null;
         try (ByteArrayOutputStream out = new ByteArrayOutputStream()) {
-            BufferedImage bufferedImage = new BufferedImage(imageToUpload.getWidth(), imageToUpload.getHeight(), BufferedImage.TYPE_INT_RGB);
-            bufferedImage.createGraphics().drawImage(imageToUpload, 0, 0, Color.BLACK, null);
-            ImageIO.write(bufferedImage, "webp", out);
-            String fileName = filenamePrefix + "_" + getTimeStamp() + ".webp";
+            BufferedImage mapWithoutTransparentBackground = new BufferedImage(imageToUpload.getWidth(), imageToUpload.getHeight(), BufferedImage.TYPE_INT_RGB);
+            mapWithoutTransparentBackground.createGraphics().drawImage(imageToUpload, 0, 0, Color.BLACK, null);
+            // TODO: Use webp one day, ImageHelper.writeWebpOrDefaultTo
+            String format = "jpg";
+            String fileName = filenamePrefix + "_" + getTimeStamp() + "." + format;
+            writeCompressedFormat(mapWithoutTransparentBackground, out, format, compressionQuality);
             fileUpload = FileUpload.fromData(out.toByteArray(), fileName);
         } catch (IOException e) {
             BotLogger.log("Could not create FileUpload for " + filenamePrefix, e);
@@ -601,7 +589,7 @@ public class MapGenerator {
 
         String turnOrdinal = StringHelper.ordinal(player.getTurnCount());
         String descr = player.getFlexibleDisplayName() + "'s " + turnOrdinal + " turn";
-        FileUpload fileUpload = uploadToDiscord(bannerImage, player.getFaction() + player.getColor() + "banner").setDescription(descr);
+        FileUpload fileUpload = createFileUpload(bannerImage, 1.0f, player.getFaction() + player.getColor() + "banner").setDescription(descr);
         MessageHelper.sendFileUploadToChannel(player.getCorrectChannel(), fileUpload);
     }
 
@@ -628,7 +616,7 @@ public class MapGenerator {
 
         superDrawString(bannerG, "Agenda #" + num, 55, 35, Color.WHITE, HorizontalAlign.Left, VerticalAlign.Bottom, stroke2, Color.BLACK);
 
-        FileUpload fileUpload = uploadToDiscord(bannerImage, "agenda" + num + "banner");
+        FileUpload fileUpload = createFileUpload(bannerImage, 1.0f, "agenda" + num + "banner");
         MessageHelper.sendFileUploadToChannel(game.getActionsChannel(), fileUpload);
     }
 
@@ -647,7 +635,7 @@ public class MapGenerator {
         superDrawString(bannerG, roundText, 255, 221, Color.WHITE, HorizontalAlign.Center, VerticalAlign.Center, stroke6, Color.BLACK);
 
         String descr = "Start of " + phase + " phase, round " + round + ".";
-        FileUpload fileUpload = uploadToDiscord(bannerImage, phase + round + "banner").setDescription(descr);
+        FileUpload fileUpload = createFileUpload(bannerImage, 1.0f, phase + round + "banner").setDescription(descr);
         MessageHelper.sendFileUploadToChannel(channel, fileUpload);
     }
 
@@ -749,7 +737,7 @@ public class MapGenerator {
                 if (convertToGeneric) {
                     continue;
                 }
-                if ((game.isMinorFactionsMode() || (player != null && player.getFaction() != null && player.getFaction().equalsIgnoreCase("neutral"))) && player.isDummy()) {
+                if ((game.isMinorFactionsMode() || player.getFaction() != null && player.getFaction().equalsIgnoreCase("neutral")) && player.isDummy()) {
                     continue;
                 }
 
@@ -823,7 +811,7 @@ public class MapGenerator {
                         } else {
                             superDrawString(graphics, scText, x + 120, y + 70, getSCColor(sc, game), HorizontalAlign.Center, VerticalAlign.Bottom, stroke2, Color.BLACK);
                             if (scModel != null) {
-                                game.addWebsiteOverlay("strategyCard", scModel.getId(), x + 110, y + 20, 25, 50);
+                                // game.addWebsiteOverlay("strategyCard", scModel.getId(), x + 110, y + 20, 25, 50);
                                 // graphics.drawRect(x + 110, y + 20, 25, 50); // debug
                             }
                             if (getSCColor(sc, game).equals(Color.GRAY)) {
@@ -910,13 +898,6 @@ public class MapGenerator {
                     g2.setFont(Storage.getFont20());
                     superDrawString(g2, "ELIMINATED", 0, 0, EliminatedColor, HorizontalAlign.Center, VerticalAlign.Center, stroke4, Color.BLACK);
                     g2.setTransform(transform);
-                } else if (player.isDummy()) {
-                    AffineTransform transform = g2.getTransform();
-                    g2.translate(x + 47 - 3, y + 47 - 6);
-                    g2.rotate(-Math.PI / 4);
-                    g2.setFont(Storage.getFont20());
-                    superDrawString(g2, "DUMMY", 0, 0, DummyColor, HorizontalAlign.Center, VerticalAlign.Center, stroke4, Color.BLACK);
-                    g2.setTransform(transform);
                 } else if (player.isPassed()) {
                     AffineTransform transform = g2.getTransform();
                     g2.translate(x + 47 - 3, y + 47 - 6);
@@ -961,7 +942,7 @@ public class MapGenerator {
                 if (!game.isFowMode()) {
                     graphics.setFont(Storage.getFont20());
                     graphics.setColor(Color.RED);
-                    if (player.getNeighbouringPlayers().size() == 0) {
+                    if (player.getNeighbouringPlayers().isEmpty()) {
                         graphics.drawString("No Neighbors", x + 9 + xSpacer, y + 125 + yDelta);
                         xSpacer = xSpacer + 115;
                     } else {
@@ -1123,7 +1104,7 @@ public class MapGenerator {
     }
 
     private int speakerToken(Player player, int xDeltaFromRightSide, int yPlayAreaSecondRow) {
-        if (player.getUserID().equals(game.getSpeaker())) {
+        if (player.getUserID().equals(game.getSpeakerUserID())) {
             xDeltaFromRightSide += 200;
             String speakerFile = ResourceHelper.getInstance().getTokenFile(Mapper.getTokenID(Constants.SPEAKER));
             if (speakerFile != null) {
@@ -1195,7 +1176,7 @@ public class MapGenerator {
             BufferedImage bufferedImage = ImageHelper.read(tokenFile);
             graphics.drawImage(bufferedImage, width - xDeltaSecondRowFromRightSide, yPlayAreaSecondRow, null);
             xDeltaSecondRowFromRightSide += 40;
-            yPlayAreaSecondRow += (alphaOnMap || betaOnMap || gammaOnMap) ? 38 : 19;
+            yPlayAreaSecondRow += alphaOnMap || betaOnMap ? 38 : 19;
         }
 
         if (!betaOnMap) {
@@ -1211,7 +1192,7 @@ public class MapGenerator {
                 graphics.drawImage(doubleWormholeImage, width - xDeltaSecondRowFromRightSide, yPlayAreaSecondRow, null);
             }
             xDeltaSecondRowFromRightSide += 40;
-            yPlayAreaSecondRow += (alphaOnMap || betaOnMap || gammaOnMap) ? 38 : 19;
+            yPlayAreaSecondRow += alphaOnMap || gammaOnMap ? 38 : 19;
         }
 
         if (!alphaOnMap) {
@@ -1227,7 +1208,7 @@ public class MapGenerator {
                 graphics.drawImage(doubleWormholeImage, width - xDeltaSecondRowFromRightSide, yPlayAreaSecondRow, null);
             }
             xDeltaSecondRowFromRightSide += 40;
-            yPlayAreaSecondRow += (alphaOnMap || betaOnMap || gammaOnMap) ? 38 : 19;
+            yPlayAreaSecondRow += betaOnMap || gammaOnMap ? 38 : 19;
         }
 
         xDeltaSecondRowFromRightSide -= (alphaOnMap && betaOnMap && gammaOnMap ? 0 : 40);
@@ -1236,7 +1217,7 @@ public class MapGenerator {
 
     private int omenDice(Player player, int x, int y) {
         int deltaX = 0;
-        if (player.hasAbility("divination") && ButtonHelperAbilities.getAllOmenDie(game).size() > 0) {
+        if (player.hasAbility("divination") && !ButtonHelperAbilities.getAllOmenDie(game).isEmpty()) {
 
             Graphics2D g2 = (Graphics2D) graphics;
             g2.setStroke(stroke2);
@@ -1376,10 +1357,10 @@ public class MapGenerator {
         List<String> fakeRelics = relics.stream()
             .filter(relic -> Mapper.getRelic(relic).isFakeRelic())
             .filter(relic -> !relic.contains("axisorder"))
-            .collect(Collectors.toList());
+            .toList();
         List<String> axisOrderRelics = player.getRelics().stream()
             .filter(relic -> relic.contains("axisorder"))
-            .collect(Collectors.toList());
+            .toList();
 
         relics.removeAll(fakeRelics);
         relics.removeAll(axisOrderRelics);
@@ -1663,7 +1644,6 @@ public class MapGenerator {
         g2.setStroke(stroke2);
         boolean addedAbilities = false;
         for (String abilityID : player.getAbilities()) {
-
             String abilityFileName = null;
             switch (abilityID) {
                 case "grace" -> abilityFileName = "pa_ds_edyn_grace";
@@ -1688,13 +1668,13 @@ public class MapGenerator {
             if (resourcePath != null) {
                 BufferedImage resourceBufferedImage = ImageHelper.read(resourcePath);
                 graphics.drawImage(resourceBufferedImage, x + deltaX, y, null);
-                graphics.drawRect(x + deltaX - 2, y - 2, 44, 152);
-            } else if (game.isFrankenGame()) {
+                drawRectWithOverlay(g2, x + deltaX - 2, y - 2, 44, 152, game, player, "ability", abilityID);
+            } else if (game.isFrankenGame()) { // TODO: or game.showAbilitiesOnMap bool = true
                 AbilityModel abilityModel = Mapper.getAbility(abilityID);
                 drawFactionIconImage(g2, abilityModel.getFaction(), x + deltaX - 1, y, 42, 42);
                 g2.setFont(Storage.getFont16());
                 drawTwoLinesOfTextVertically(g2, abilityModel.getShortName(), x + deltaX + 6, y + 144, 130);
-                graphics.drawRect(x + deltaX - 2, y - 2, 44, 152);
+                drawRectWithOverlay(g2, x + deltaX - 2, y - 2, 44, 152, game, player, "ability", abilityID);
             }
 
             deltaX += 48;
@@ -1747,7 +1727,7 @@ public class MapGenerator {
                 int numInReinforcements = unitCap - count;
                 BufferedImage image = ImageHelper.read(ResourceHelper.getInstance().getUnitFile(unitKey));
                 BufferedImage decal = null;
-                if (player != null) decal = ImageHelper.read(ResourceHelper.getInstance().getDecalFile(player.getDecalFile(unitID)));
+                decal = ImageHelper.read(ResourceHelper.getInstance().getDecalFile(player.getDecalFile(unitID)));
                 for (int i = 0; i < numInReinforcements; i++) {
                     Point position = reinforcementsPosition.getPosition(unitID);
                     graphics.drawImage(image, x + position.x, y + position.y, null);
@@ -2388,8 +2368,14 @@ public class MapGenerator {
 
             int types = 0;
             String techIcon = "";
-            if (techInformation.isPropulsionTech() && types++ < 2) techIcon += "propulsion";
-            if (techInformation.isCyberneticTech() && types++ < 2) techIcon += "cybernetic";
+            if (techInformation.isPropulsionTech()) {
+                types++;
+                techIcon += "propulsion";
+            }
+            if (techInformation.isCyberneticTech()) {
+                types++;
+                techIcon += "cybernetic";
+            }
             if (techInformation.isBioticTech() && types++ < 2) techIcon += "biotic";
             if (techInformation.isWarfareTech() && types++ < 2) techIcon += "warfare";
 
@@ -2581,7 +2567,7 @@ public class MapGenerator {
                 }
             }
             // Unit Overlays
-            game.addWebsiteOverlay(player, "unit", unit.getId(), x + unitFactionOffset.x, y + unitFactionOffset.y, 32, 32);
+            game.addWebsiteOverlay(player, "unit", unit.getId(), deltaX + x + unitFactionOffset.x, y + unitFactionOffset.y, 32, 32);
             // graphics.drawRect(deltaX + x + unitFactionOffset.x, y + unitFactionOffset.y, 32, 32); //debug
         }
         graphics.setColor(Color.WHITE);
@@ -2739,7 +2725,6 @@ public class MapGenerator {
     private static void superDrawString(Graphics2D g, String txt, int x, int y, Color textColor, HorizontalAlign horizontalAlignment, VerticalAlign verticalAlignment, Stroke outlineSize, Color outlineColor) {
         boolean debugPosition = false;
         if (txt == null) return;
-        if (debugPosition) drawCrosshair(g, x, y); // debug
 
         int width = g.getFontMetrics().stringWidth(txt);
         if (horizontalAlignment != null) {
@@ -2754,7 +2739,7 @@ public class MapGenerator {
         int height = g.getFontMetrics().getAscent() - g.getFontMetrics().getDescent();
         if (verticalAlignment != null) {
             switch (verticalAlignment) {
-                case Center -> y += height / 2.0;
+                case Center -> y += height / 2;
                 case Top -> y += height;
                 case Bottom -> {
                 }
@@ -2766,7 +2751,6 @@ public class MapGenerator {
             outlineColor = Color.BLACK;
             textColor = Color.WHITE;
         }
-        if (debugPosition) g.drawRect(x, y - height, width, height); // debug
         if (outlineSize == null || outlineColor == null) {
             g.drawString(txt, x, y);
         } else {
@@ -3224,10 +3208,10 @@ public class MapGenerator {
         // Otherwise, cache it
         Function<String, BufferedImage> loader = (name) -> hexBorder(color, openSides, style.equals("solid"));
         Collections.sort(openSides);
-        String key = color.getName() + "-HexBorder-" + style;
+        StringBuilder key = new StringBuilder(color.getName() + "-HexBorder-" + style);
         for (int x : openSides)
-            key += "_" + x;
-        return ImageHelper.createOrLoadCalculatedImage(key, loader);
+            key.append("_").append(x);
+        return ImageHelper.createOrLoadCalculatedImage(key.toString(), loader);
     }
 
     private void paintPlayerInfo(Game game, Player player, List<String> statTiles) {
@@ -3361,7 +3345,7 @@ public class MapGenerator {
                     int fontYoffset = (scsize / 2) + 25;
                     superDrawString(graphics, Integer.toString(sc), point.x, point.y + fontYoffset, getSCColor(sc, game), center, bottom, stroke6, Color.BLACK);
                     if (scModel != null) {
-                        game.addWebsiteOverlay("strategyCard", scModel.getId(), point.x - 20, point.y + 20, 40, 50);
+                        game.addWebsiteOverlay(player, "strategyCard", scModel.getId(), point.x - 20, point.y + 20, 40, 50);
                         // graphics.drawRect(point.x - 20, point.y + 20, 40, 50); //debug
                     }
                     point.translate(scsize, 0);
@@ -3445,7 +3429,7 @@ public class MapGenerator {
                 String relicFile = ResourceHelper.getInstance().getGeneralFile("Relic.png");
                 BufferedImage bufferedImage = ImageHelper.read(relicFile);
                 if (offBoardHighlighting >= 1) {
-                    bufferedImage = ImageHelper.scale(bufferedImage, (float) Math.sqrt(24000.0f / (offBoardHighlighting + (hasNanoForge ? 1 : 0)) / bufferedImage.getWidth() / bufferedImage.getHeight()));
+                    bufferedImage = ImageHelper.scale(bufferedImage, (float) Math.sqrt(24000.0f / (offBoardHighlighting + 1) / bufferedImage.getWidth() / bufferedImage.getHeight()));
                     graphics.drawImage(bufferedImage,
                         miscTile.x + (345 - bufferedImage.getWidth()) / 2 + 30,
                         miscTile.y + (300 - bufferedImage.getHeight()) / 2 + 30 + (player.isSpeaker() ? 30 : 0),
@@ -3577,7 +3561,7 @@ public class MapGenerator {
                 offBoardHighlighting += unitNum;
             }
         } else if (displayType == DisplayType.traits) {
-            List<String> traitFiles = new ArrayList<String>();
+            List<String> traitFiles = new ArrayList<>();
             for (String planet : player.getPlanets()) {
                 PlanetModel custodiaVigilia = Mapper.getPlanet(planet);
                 if (game.getTileFromPlanet(planet) == null) {
@@ -3585,16 +3569,16 @@ public class MapGenerator {
                     String traitFile = "";
                     List<String> traits = planetReal.getPlanetType();
 
-                    if (planetReal.getOriginalPlanetType().equals("faction") && traits.size() == 0) {
+                    if (planetReal.getOriginalPlanetType().equals("faction") && traits.isEmpty()) {
                         if (custodiaVigilia.getFactionHomeworld() == null) {
                             traitFile = ResourceHelper.getInstance().getGeneralFile("Legendary_complete.png");
                         } else {
                             traitFile = ResourceHelper.getInstance().getFactionFile(custodiaVigilia.getFactionHomeworld() + ".png");
                         }
                     } else if (traits.size() == 1) {
-                        String t = planetReal.getPlanetType().get(0);
+                        String t = planetReal.getPlanetType().getFirst();
                         traitFile = ResourceHelper.getInstance().getGeneralFile(("" + t.charAt(0)).toUpperCase() + t.substring(1).toLowerCase() + ".png");
-                    } else if (traits.size() == 0) {
+                    } else if (traits.isEmpty()) {
                     } else {
                         String t = "";
                         t += traits.contains("cultural") ? "C" : "";
@@ -3620,7 +3604,7 @@ public class MapGenerator {
                         null);
                 }
             } else if (offBoardHighlighting == 1) {
-                BufferedImage bufferedImage = ImageHelper.read(traitFiles.get(0));
+                BufferedImage bufferedImage = ImageHelper.read(traitFiles.getFirst());
                 bufferedImage = ImageHelper.scale(bufferedImage, (float) Math.sqrt(24000.0f / bufferedImage.getWidth() / bufferedImage.getHeight()));
                 graphics.drawImage(bufferedImage,
                     miscTile.x + (345 - bufferedImage.getWidth()) / 2,
@@ -3628,7 +3612,7 @@ public class MapGenerator {
                     null);
             }
         } else if (displayType == DisplayType.techskips) {
-            List<String> techFiles = new ArrayList<String>();
+            List<String> techFiles = new ArrayList<>();
             for (String planet : player.getPlanets()) {
                 PlanetModel custodiaVigilia = Mapper.getPlanet(planet);
                 if (game.getTileFromPlanet(planet) == null) {
@@ -3636,7 +3620,7 @@ public class MapGenerator {
                     List<String> skips = planetReal.getTechSpeciality();
                     skips.removeAll(Collections.singleton(null));
                     skips.removeAll(Collections.singleton(""));
-                    if (skips.size() == 0) {
+                    if (skips.isEmpty()) {
                         continue;
                     }
                     for (String skip : skips) {
@@ -3670,7 +3654,7 @@ public class MapGenerator {
                         null);
                 }
             } else if (offBoardHighlighting == 1) {
-                BufferedImage bufferedImage = ImageHelper.read(techFiles.get(0));
+                BufferedImage bufferedImage = ImageHelper.read(techFiles.getFirst());
                 bufferedImage = ImageHelper.scale(bufferedImage, (float) Math.sqrt(24000.0f / bufferedImage.getWidth() / bufferedImage.getHeight()));
                 graphics.drawImage(bufferedImage,
                     miscTile.x + (345 - bufferedImage.getWidth()) / 2,
@@ -3686,7 +3670,7 @@ public class MapGenerator {
                     List<String> attach = new ArrayList<>(planetReal.getAttachments());
                     attach.removeAll(Collections.singleton(null));
                     attach.removeAll(Collections.singleton(""));
-                    if (attach.size() == 0) {
+                    if (attach.isEmpty()) {
                         continue;
                     }
                     attachFiles.put(planet, ResourceHelper.getInstance().getGeneralFile("misc_chevrons_basic.png"));
@@ -4307,7 +4291,7 @@ public class MapGenerator {
         if (player.isSearchWarrant()) {
             graphics.setColor(Color.LIGHT_GRAY);
             Map<String, Integer> revealedSecrets = new LinkedHashMap<>(secrets);
-            y = displaySecretObjectives(y, x, new LinkedHashMap<>(), revealedSecrets, players, secretObjectives, secret, 0, customPublicVP);
+            y = displaySecretObjectives(y, new LinkedHashMap<>(), revealedSecrets, players, secretObjectives, secret, customPublicVP);
         }
         Map<String, Integer> secretsScored = new LinkedHashMap<>(player.getSecretsScored());
         for (String id : game.getSoToPoList()) {
@@ -4322,7 +4306,7 @@ public class MapGenerator {
             scoredSecretObjectives.put(id, List.of(player.getUserID()));
         }
         graphics.setColor(Color.RED);
-        y = displaySecretObjectives(y, x, scoredSecretObjectives, revealedSecretObjectives, players, secretObjectives, secret, 1, customPublicVP);
+        y = displaySecretObjectives(y, scoredSecretObjectives, revealedSecretObjectives, players, secretObjectives, secret, customPublicVP);
         if (player.isSearchWarrant()) {
             return secretsScored.keySet().size() + player.getSecrets().keySet().size();
         }
@@ -4331,18 +4315,16 @@ public class MapGenerator {
 
     private int displaySecretObjectives(
         int y,
-        int x,
         Map<String, List<String>> scoredPublicObjectives,
         Map<String, Integer> revealedPublicObjectives,
         Map<String, Player> players,
         Map<String, String> publicObjectivesState,
         Set<String> po,
-        Integer objectiveWorth,
         Map<String, Integer> customPublicVP) {
 
         Set<String> keysToRemove = new HashSet<>();
         for (Map.Entry<String, Integer> revealed : revealedPublicObjectives.entrySet()) {
-            x = 50;
+            int x = 50;
 
             String key = revealed.getKey();
             if (!po.contains(key)) {
@@ -4355,7 +4337,7 @@ public class MapGenerator {
             }
             keysToRemove.add(key);
             if (customPublicVP != null) {
-                objectiveWorth = customPublicVP.get(key);
+                Integer objectiveWorth = customPublicVP.get(key);
                 if (objectiveWorth == null) {
                     objectiveWorth = 1;
                 }
@@ -4631,10 +4613,11 @@ public class MapGenerator {
                 tileGraphics.drawImage(image, TILE_PADDING, TILE_PADDING, null);
 
                 // ADD ANOMALY BORDER IF HAS ANOMALY PRODUCING TOKENS OR UNITS
-                if (tile.isAnomaly(game)) {
+                ShipPosition shipPositionsType = TileHelper.getAllTiles().get(tile.getTileID()).getShipPositionsType();
+                if (tile.isAnomaly(game) && shipPositionsType != null) {
                     BufferedImage anomalyImage = ImageHelper.read(ResourceHelper.getInstance().getTileFile("tile_anomaly.png"));
                     int offset = 0;
-                    switch (TileHelper.getAllTiles().get(tile.getTileID()).getShipPositionsType().toString().toUpperCase()) {
+                    switch (shipPositionsType.toString().toUpperCase()) {
                         case "TYPE09":
                         case "TYPE12":
                         case "TYPE15":
@@ -4662,14 +4645,12 @@ public class MapGenerator {
                     tileGraphics.drawImage(border, TILE_PADDING, TILE_PADDING, null);
                 }
 
-                if ("large".equals(game.getTextSize())) {
-                    tileGraphics.setFont(Storage.getFont40());
-                } else if ("medium".equals(game.getTextSize())) {
-                    tileGraphics.setFont(Storage.getFont30());
-                } else if ("tiny".equals(game.getTextSize())) {
-                    tileGraphics.setFont(Storage.getFont12());
-                } else { // "small"
-                    tileGraphics.setFont(Storage.getFont20());
+                switch (game.getTextSize()) {
+                    case "large" -> tileGraphics.setFont(Storage.getFont40());
+                    case "medium" -> tileGraphics.setFont(Storage.getFont30());
+                    case "tiny" -> tileGraphics.setFont(Storage.getFont12());
+                    case null, default ->  // "small"
+                            tileGraphics.setFont(Storage.getFont20());
                 }
 
                 if (isFrogPrivate != null && isFrogPrivate && tile.hasFog(frogPlayer)) {
@@ -4734,7 +4715,7 @@ public class MapGenerator {
                 }
                 if ((ButtonHelper.isLawInPlay(game, "shared_research")) && tile.isNebula()) {
                     BufferedImage nebulaBypass = ImageHelper.read(ResourceHelper.getInstance().getTokenFile("agenda_shared_research.png"));
-                    if (TileHelper.getAllTiles().get(tile.getTileID()).getShipPositionsType().isSpiral()) {
+                    if (shipPositionsType != null && shipPositionsType.isSpiral()) {
                         switch (tile.getTileID()) {
                             case "51":
                                 tileGraphics.drawImage(nebulaBypass, TILE_PADDING + 42, TILE_PADDING + 235, null);
@@ -4810,19 +4791,16 @@ public class MapGenerator {
                     }
                     List<String> problematicTiles = List.of("25", "26", "64"); // quann, lodor, atlas
                     BufferedImage gearImage = ImageHelper.readScaled(ResourceHelper.getInstance().getTileFile("production_representation.png"), 64, 64);
+                    int xMod;
+                    int yMod = -290;
                     if (tile.getUnitHolders().size() != 4 || problematicTiles.contains(tile.getTileID())) {
-                        int xMod = -15;
-                        int yMod = -290;
-                        tileGraphics.drawImage(gearImage, TILE_PADDING + tilePositionPoint.x + xMod - 29, TILE_PADDING + tilePositionPoint.y + yMod - 4, null);
-                        tileGraphics.setFont(Storage.getFont35());
-                        tileGraphics.drawString(prodInSystem + "", TILE_PADDING + tilePositionPoint.x + xMod + 15 + textModifer - 25, TILE_PADDING + tilePositionPoint.y + yMod + 40);
+                        xMod = -15;
                     } else {
-                        int xMod = -155;
-                        int yMod = -290;
-                        tileGraphics.drawImage(gearImage, TILE_PADDING + tilePositionPoint.x + xMod - 29, TILE_PADDING + tilePositionPoint.y + yMod - 4, null);
-                        tileGraphics.setFont(Storage.getFont35());
-                        tileGraphics.drawString(prodInSystem + "", TILE_PADDING + tilePositionPoint.x + xMod + 15 + textModifer - 25, TILE_PADDING + tilePositionPoint.y + yMod + 40);
+                        xMod = -155;
                     }
+                    tileGraphics.drawImage(gearImage, TILE_PADDING + tilePositionPoint.x + xMod - 29, TILE_PADDING + tilePositionPoint.y + yMod - 4, null);
+                    tileGraphics.setFont(Storage.getFont35());
+                    tileGraphics.drawString(prodInSystem + "", TILE_PADDING + tilePositionPoint.x + xMod + 15 + textModifer - 25, TILE_PADDING + tilePositionPoint.y + yMod + 40);
                 }
 
                 if (spaceUnitHolder != null) {
@@ -5051,7 +5029,7 @@ public class MapGenerator {
 
                 int x = TILE_PADDING;
                 int y = TILE_PADDING;
-                boolean isEmpty = tile.getPlanetUnitHolders().size() == 0;
+                boolean isEmpty = tile.getPlanetUnitHolders().isEmpty();
 
                 if (!isEmpty) {
                     BufferedImage fogging = ImageHelper.read(tile.getFowTilePath(null));
@@ -5084,11 +5062,11 @@ public class MapGenerator {
                 int x = TILE_PADDING;
                 int y = TILE_PADDING;
                 String tilePos = tile.getPosition();
-                HashMap<Player, List<Integer>> pdsDice = new HashMap<Player, List<Integer>>();
+                HashMap<Player, List<Integer>> pdsDice = new HashMap<>();
 
                 for (Player player : game.getRealPlayers()) {
-                    List<Integer> diceCount = new ArrayList<Integer>();
-                    List<Integer> diceCountMirveda = new ArrayList<Integer>();
+                    List<Integer> diceCount = new ArrayList<>();
+                    List<Integer> diceCountMirveda = new ArrayList<>();
                     int mod = (game.playerHasLeaderUnlockedOrAlliance(player, "kolumecommander") ? 1 : 0);
 
                     if (player.hasAbility("starfall_gunnery")) {
@@ -5139,24 +5117,24 @@ public class MapGenerator {
                         }
                     }
 
-                    if (diceCountMirveda.size() > 0) {
+                    if (!diceCountMirveda.isEmpty()) {
                         Collections.sort(diceCountMirveda);
-                        diceCount.add(diceCountMirveda.get(0));
+                        diceCount.add(diceCountMirveda.getFirst());
                     }
 
-                    if (diceCount.size() > 0) {
+                    if (!diceCount.isEmpty()) {
                         Collections.sort(diceCount);
                         if (player.getTechs().contains("ps")) {
-                            diceCount.add(0, diceCount.get(0));
+                            diceCount.addFirst(diceCount.getFirst());
                         }
                         if (game.playerHasLeaderUnlockedOrAlliance(player, "argentcommander")) {
-                            diceCount.add(0, diceCount.get(0));
+                            diceCount.addFirst(diceCount.getFirst());
                         }
                         pdsDice.put(player, diceCount);
                     }
                 }
 
-                if (pdsDice.size() == 0) {
+                if (pdsDice.isEmpty()) {
                     BufferedImage fogging = ImageHelper.read(tile.getFowTilePath(null));
                     tileGraphics.drawImage(fogging, x, y, null);
                 } else {
@@ -5165,30 +5143,29 @@ public class MapGenerator {
                     float scale = pdsDice.size() >= 3 ? 6.0f / pdsDice.size() : 3.0f;
 
                     Font bigFont = Storage.getFont64();
-                    Font smallFont = Storage.getFont32();
-                    switch (pdsDice.size()) {
-                        case 1:
-                        case 2:
+                    Storage.getFont32();
+                    Font smallFont = switch (pdsDice.size()) {
+                        case 1, 2 -> {
                             bigFont = Storage.getFont64();
-                            smallFont = Storage.getFont32();
-                            break;
-                        case 3:
+                            yield Storage.getFont32();
+                        }
+                        case 3 -> {
                             bigFont = Storage.getFont40();
-                            smallFont = Storage.getFont20();
-                            break;
-                        case 4:
+                            yield Storage.getFont20();
+                        }
+                        case 4 -> {
                             bigFont = Storage.getFont32();
-                            smallFont = Storage.getFont16();
-                            break;
-                        case 5:
+                            yield Storage.getFont16();
+                        }
+                        case 5 -> {
                             bigFont = Storage.getFont24();
-                            smallFont = Storage.getFont12();
-                            break;
-                        default:
+                            yield Storage.getFont12();
+                        }
+                        default -> {
                             bigFont = Storage.getFont16();
-                            smallFont = Storage.getFont8();
-                            break;
-                    }
+                            yield Storage.getFont8();
+                        }
+                    };
 
                     x += (345 - 73 * scale) / 2;
                     y += (300 - pdsDice.size() * 48 * scale) / 2;
@@ -5215,24 +5192,24 @@ public class MapGenerator {
                             new Rectangle(Math.round(x + 6 * scale), Math.round(y + 12 * scale + 24 * scale * 2 / 3), Math.round(61 * scale / 2), Math.round(24 * scale / 3)),
                             smallFont);
                         if (numberOfDice >= 5) {
-                            drawCenteredString(tileGraphics, pdsDice.get(player).subList(0, numberOfDice / 3).stream().map(i -> i.toString()).collect(Collectors.joining(",")) + ",",
+                            drawCenteredString(tileGraphics, pdsDice.get(player).subList(0, numberOfDice / 3).stream().map(Object::toString).collect(Collectors.joining(",")) + ",",
                                 new Rectangle(Math.round(x + 73 * scale / 2), Math.round(y + 6 * scale), Math.round(73 * scale / 2), Math.round(36 * scale / 3)),
                                 smallFont);
-                            drawCenteredString(tileGraphics, pdsDice.get(player).subList(numberOfDice / 3, 2 * numberOfDice / 3).stream().map(i -> i.toString()).collect(Collectors.joining(",")) + ",",
+                            drawCenteredString(tileGraphics, pdsDice.get(player).subList(numberOfDice / 3, 2 * numberOfDice / 3).stream().map(Object::toString).collect(Collectors.joining(",")) + ",",
                                 new Rectangle(Math.round(x + 73 * scale / 2), Math.round(y + 6 * scale + 36 * scale / 3), Math.round(73 * scale / 2), Math.round(36 * scale / 3)),
                                 smallFont);
-                            drawCenteredString(tileGraphics, pdsDice.get(player).subList(2 * numberOfDice / 3, numberOfDice).stream().map(i -> i.toString()).collect(Collectors.joining(",")),
+                            drawCenteredString(tileGraphics, pdsDice.get(player).subList(2 * numberOfDice / 3, numberOfDice).stream().map(Object::toString).collect(Collectors.joining(",")),
                                 new Rectangle(Math.round(x + 73 * scale / 2), Math.round(y + 6 * scale + 36 * scale * 2 / 3), Math.round(73 * scale / 2), Math.round(36 * scale / 3)),
                                 smallFont);
                         } else if (numberOfDice >= 3) {
-                            drawCenteredString(tileGraphics, pdsDice.get(player).subList(0, numberOfDice / 2).stream().map(i -> i.toString()).collect(Collectors.joining(",")) + ",",
+                            drawCenteredString(tileGraphics, pdsDice.get(player).subList(0, numberOfDice / 2).stream().map(Object::toString).collect(Collectors.joining(",")) + ",",
                                 new Rectangle(Math.round(x + 73 * scale / 2), Math.round(y + 12 * scale), Math.round(73 * scale / 2), Math.round(24 * scale / 2)),
                                 smallFont);
-                            drawCenteredString(tileGraphics, pdsDice.get(player).subList(numberOfDice / 2, numberOfDice).stream().map(i -> i.toString()).collect(Collectors.joining(",")),
+                            drawCenteredString(tileGraphics, pdsDice.get(player).subList(numberOfDice / 2, numberOfDice).stream().map(Object::toString).collect(Collectors.joining(",")),
                                 new Rectangle(Math.round(x + 73 * scale / 2), Math.round(y + 12 * scale + 24 * scale / 2), Math.round(73 * scale / 2), Math.round(24 * scale / 2)),
                                 smallFont);
                         } else {
-                            drawCenteredString(tileGraphics, pdsDice.get(player).stream().map(i -> i.toString()).collect(Collectors.joining(",")),
+                            drawCenteredString(tileGraphics, pdsDice.get(player).stream().map(Object::toString).collect(Collectors.joining(",")),
                                 new Rectangle(Math.round(x + 73 * scale / 2), y, Math.round(73 * scale / 2), Math.round(48 * scale)),
                                 smallFont);
                         }
@@ -5259,7 +5236,7 @@ public class MapGenerator {
                 for (Planet planet : tile.getPlanetUnitHolders()) {
                     String traitFile = "";
                     List<String> traits = planet.getPlanetType();
-                    if (traits.size() == 0) {
+                    if (traits.isEmpty()) {
                         traits.add(planet.getOriginalPlanetType());
                     }
 
@@ -5268,9 +5245,9 @@ public class MapGenerator {
                     } else if (planet.getOriginalPlanetType().equals("faction")) {
                         traitFile = ResourceHelper.getInstance().getFactionFile(Mapper.getPlanet(planet.getName()).getFactionHomeworld() + ".png");
                     } else if (traits.size() == 1) {
-                        String t = planet.getPlanetType().get(0);
+                        String t = planet.getPlanetType().getFirst();
                         traitFile = ResourceHelper.getInstance().getGeneralFile(("" + t.charAt(0)).toUpperCase() + t.substring(1).toLowerCase() + ".png");
-                    } else if (traits.size() == 0) {
+                    } else if (traits.isEmpty()) {
                     } else {
                         String t = "";
                         t += traits.contains("cultural") ? "C" : "";
@@ -5283,7 +5260,7 @@ public class MapGenerator {
                         }
                     }
 
-                    if (!traitFile.equals("")) {
+                    if (!traitFile.isEmpty()) {
                         BufferedImage bufferedImage = ImageHelper.read(traitFile);
                         bufferedImage = ImageHelper.scale(bufferedImage, (float) Math.sqrt(9200.0f / bufferedImage.getWidth() / bufferedImage.getHeight()));
                         int w = bufferedImage.getWidth();
@@ -5363,23 +5340,13 @@ public class MapGenerator {
                     int count = 0;
 
                     for (String skip : skips) {
-                        String skipFile;
-                        switch (skip.toLowerCase()) {
-                            case "biotic":
-                                skipFile = ResourceHelper.getInstance().getGeneralFile("Biotic light.png");
-                                break;
-                            case "cybernetic":
-                                skipFile = ResourceHelper.getInstance().getGeneralFile("Cybernetic light.png");
-                                break;
-                            case "propulsion":
-                                skipFile = ResourceHelper.getInstance().getGeneralFile("Propulsion_light.png");
-                                break;
-                            case "warfare":
-                                skipFile = ResourceHelper.getInstance().getGeneralFile("Warfare_light.png");
-                                break;
-                            default:
-                                skipFile = ResourceHelper.getInstance().getGeneralFile("Generic_Technology.png");
-                        }
+                        String skipFile = switch (skip.toLowerCase()) {
+                            case "biotic" -> ResourceHelper.getInstance().getGeneralFile("Biotic light.png");
+                            case "cybernetic" -> ResourceHelper.getInstance().getGeneralFile("Cybernetic light.png");
+                            case "propulsion" -> ResourceHelper.getInstance().getGeneralFile("Propulsion_light.png");
+                            case "warfare" -> ResourceHelper.getInstance().getGeneralFile("Warfare_light.png");
+                            default -> ResourceHelper.getInstance().getGeneralFile("Generic_Technology.png");
+                        };
 
                         BufferedImage bufferedImage = ImageHelper.read(skipFile);
                         bufferedImage = ImageHelper.scale(bufferedImage, (float) Math.sqrt(9200.0f / bufferedImage.getWidth() / bufferedImage.getHeight() / Math.sqrt(1.0f * number)));
@@ -5454,7 +5421,7 @@ public class MapGenerator {
                 }
                 boolean anyAttachments = false;
                 for (Planet planet : tile.getPlanetUnitHolders()) {
-                    List<String> attachments = new ArrayList<String>(planet.getAttachments());
+                    List<String> attachments = new ArrayList<>(planet.getAttachments());
                     attachments.removeAll(Collections.singleton(null));
                     attachments.removeAll(Collections.singleton(""));
                     int number = attachments.size();
@@ -5745,16 +5712,10 @@ public class MapGenerator {
             return o1.compareTo(o2);
         });
         if (game.isShowBubbles() && unitHolder instanceof Planet planetHolder && shouldPlanetHaveShield(unitHolder, game)) {
-            String tokenPath;
-            switch (planetHolder.getContrastColor()) {
-                case "orange":
-                    tokenPath = ResourceHelper.getInstance().getTokenFile("token_planetaryShield_orange.png");
-                    break;
-                case "blue":
-                default:
-                    tokenPath = ResourceHelper.getInstance().getTokenFile("token_planetaryShield.png");
-                    break;
-            }
+            String tokenPath = switch (planetHolder.getContrastColor()) {
+                case "orange" -> ResourceHelper.getInstance().getTokenFile("token_planetaryShield_orange.png");
+                default -> ResourceHelper.getInstance().getTokenFile("token_planetaryShield.png");
+            };
             float scale = 0.95f;
             List<String> smallLegendaries = List.of("mirage", "mallice", "mallicelocked", "eko", "domna");
             if (Mapper.getPlanet(unitHolder.getName()).getLegendaryAbilityText() != null
@@ -5899,15 +5860,9 @@ public class MapGenerator {
                 if (tokenPath.contains(Constants.WORLD_DESTROYED) ||
                     tokenPath.contains(Constants.CONSULATE_TOKEN) ||
                     tokenPath.contains(Constants.GLEDGE_CORE) || tokenPath.contains("freepeople")) {
-                    if (tokenPath.contains(Constants.WORLD_DESTROYED)) {
-                        tileGraphics.drawImage(tokenImage,
-                            TILE_PADDING + centerPosition.x - (tokenImage.getWidth() / 2),
-                            TILE_PADDING + centerPosition.y - (tokenImage.getHeight() / 2), null);
-                    } else {
-                        tileGraphics.drawImage(tokenImage,
-                            TILE_PADDING + centerPosition.x - (tokenImage.getWidth() / 2),
-                            TILE_PADDING + centerPosition.y - (tokenImage.getHeight() / 2), null);
-                    }
+                    tileGraphics.drawImage(tokenImage,
+                        TILE_PADDING + centerPosition.x - (tokenImage.getWidth() / 2),
+                        TILE_PADDING + centerPosition.y - (tokenImage.getHeight() / 2), null);
                 } else if (tokenPath.contains(Constants.DMZ_LARGE)) {
                     float scale = 0.3f;
                     List<String> smallLegendaries = List.of("mirage", "mallice", "mallicelocked", "eko", "domna");
@@ -5991,8 +5946,8 @@ public class MapGenerator {
         int deltaX = 80;
         int deltaY = 0;
         float mirageDragRatio = 2.0f / 3;
-        int mirageDragX = Math.round((345 / 8 + TILE_PADDING) * (1 - mirageDragRatio));
-        int mirageDragY = Math.round((3 * 300 / 4 + TILE_PADDING) * (1 - mirageDragRatio));
+        int mirageDragX = Math.round(((float) 345 / 8 + TILE_PADDING) * (1 - mirageDragRatio));
+        int mirageDragY = Math.round(((float) (3 * 300) / 4 + TILE_PADDING) * (1 - mirageDragRatio));
         boolean hasMirage = tokenList.stream().anyMatch(tok -> tok.contains("mirage")) && (tile.getPlanetUnitHolders().size() != 3 + 1);
         List<Point> spaceTokenPositions = PositionMapper.getSpaceTokenPositions(tile.getTileID());
         if (spaceTokenPositions.isEmpty()) {
@@ -6089,8 +6044,8 @@ public class MapGenerator {
         }
 
         float mirageDragRatio = 2.0f / 3;
-        int mirageDragX = Math.round((345 / 8 + TILE_PADDING) * (1 - mirageDragRatio));
-        int mirageDragY = Math.round((3 * 300 / 4 + TILE_PADDING) * (1 - mirageDragRatio));
+        int mirageDragX = Math.round(((float) 345 / 8 + TILE_PADDING) * (1 - mirageDragRatio));
+        int mirageDragY = Math.round(((float) (3 * 300) / 4 + TILE_PADDING) * (1 - mirageDragRatio));
         boolean hasMirage = false;
         if (isSpace) {
             Set<String> tokenList = unitHolder.getTokenList();
