@@ -5,7 +5,6 @@ import java.util.List;
 
 import net.dv8tion.jda.api.entities.channel.concrete.ThreadChannel;
 import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
-import net.dv8tion.jda.api.entities.emoji.Emoji;
 import net.dv8tion.jda.api.events.interaction.GenericInteractionCreateEvent;
 import net.dv8tion.jda.api.events.interaction.component.ButtonInteractionEvent;
 import net.dv8tion.jda.api.interactions.components.buttons.Button;
@@ -75,7 +74,7 @@ public class ComponentActionHelper {
 
         // Leaders
         for (Leader leader : p1.getLeaders()) {
-            if (!leader.isExhausted() && !leader.isLocked()) {
+            if (!leader.isExhausted() && !leader.isLocked() && !leader.isActive()) {
                 String leaderID = leader.getId();
 
                 LeaderModel leaderModel = Mapper.getLeader(leaderID);
@@ -139,7 +138,7 @@ public class ComponentActionHelper {
                     }
 
                 } else if ("mahactcommander".equalsIgnoreCase(leaderID) && p1.getTacticalCC() > 0
-                    && ButtonHelper.getTilesWithYourCC(p1, game, event).size() > 0) {
+                    && !ButtonHelper.getTilesWithYourCC(p1, game, event).isEmpty()) {
                     Button lButton = Buttons.gray(finChecker + "mahactCommander", "Use " + leaderName, factionEmoji);
                     compButtons.add(lButton);
                 }
@@ -204,12 +203,12 @@ public class ComponentActionHelper {
 
         // Abilities
         if (p1.hasAbility("star_forge") && (p1.getStrategicCC() > 0 || p1.hasRelicReady("emelpar"))
-            && ButtonHelper.getTilesOfPlayersSpecificUnits(game, p1, UnitType.Warsun).size() > 0) {
+            && !ButtonHelper.getTilesOfPlayersSpecificUnits(game, p1, UnitType.Warsun).isEmpty()) {
             Button abilityButton = Buttons.green(finChecker + prefix + "ability_starForge", "Starforge", Emojis.Muaat);
             compButtons.add(abilityButton);
         }
         if (p1.hasAbility("meditation") && (p1.getStrategicCC() > 0 || p1.hasRelicReady("emelpar"))
-            && p1.getExhaustedTechs().size() > 0) {
+            && !p1.getExhaustedTechs().isEmpty()) {
             Button abilityButton = Buttons.green(finChecker + prefix + "ability_meditation", "Meditation", Emojis.kolume);
             compButtons.add(abilityButton);
         }
@@ -217,28 +216,28 @@ public class ComponentActionHelper {
             Button abilityButton = Buttons.green(finChecker + prefix + "ability_orbitalDrop", "Orbital Drop", Emojis.Sol);
             compButtons.add(abilityButton);
         }
-        if (p1.hasUnit("lanefir_mech") && p1.getFragments().size() > 0
+        if (p1.hasUnit("lanefir_mech") && !p1.getFragments().isEmpty()
             && ButtonHelper.getNumberOfUnitsOnTheBoard(game, p1, "mech", true) < 4) {
             Button abilityButton = Buttons.green(finChecker + prefix + "ability_lanefirMech", "Purge 1 Fragment For Mech", Emojis.lanefir);
             compButtons.add(abilityButton);
         }
         if (p1.hasAbility("mantle_cracking")
-            && ButtonHelperAbilities.getMantleCrackingButtons(p1, game).size() > 0) {
+            && !ButtonHelperAbilities.getMantleCrackingButtons(p1, game).isEmpty()) {
             Button abilityButton = Buttons.green(finChecker + prefix + "ability_mantlecracking", "Mantle Crack", Emojis.gledge);
             compButtons.add(abilityButton);
         }
-        if (p1.hasAbility("stall_tactics") && p1.getActionCards().size() > 0) {
+        if (p1.hasAbility("stall_tactics") && !p1.getActionCards().isEmpty()) {
             Button abilityButton = Buttons.green(finChecker + prefix + "ability_stallTactics", "Stall Tactics", Emojis.Yssaril);
             compButtons.add(abilityButton);
         }
-        if (p1.hasAbility("fabrication") && p1.getFragments().size() > 0) {
+        if (p1.hasAbility("fabrication") && !p1.getFragments().isEmpty()) {
             Button abilityButton = Buttons.green(finChecker + prefix + "ability_fabrication", "Purge 1 Fragment for 1 CC", Emojis.Naaz);
             compButtons.add(abilityButton);
         }
 
         // Other "abilities"
         if (p1.getUnitsOwned().contains("muaat_flagship") && p1.getStrategicCC() > 0
-            && ButtonHelper.getTilesOfPlayersSpecificUnits(game, p1, UnitType.Flagship).size() > 0) {
+            && !ButtonHelper.getTilesOfPlayersSpecificUnits(game, p1, UnitType.Flagship).isEmpty()) {
             Button abilityButton = Buttons.green(finChecker + prefix + "ability_muaatFS", "Spend 1 strategy CC for 1 cruiser with The Inferno (Muaat Flagship)", Emojis.Muaat);
             compButtons.add(abilityButton);
         }
@@ -341,7 +340,7 @@ public class ComponentActionHelper {
                     ButtonHelperCommanders.resolveMuaatCommanderCheck(p1, game, event,
                         Emojis.Muaat + Emojis.flagship + "The Inferno");
                     List<Tile> tiles = ButtonHelper.getTilesOfPlayersSpecificUnits(game, p1, UnitType.Flagship);
-                    Tile tile = tiles.get(0);
+                    Tile tile = tiles.getFirst();
                     List<Button> buttons = TurnStart.getStartOfTurnButtons(p1, game, true, event);
                     new AddUnits().unitParsing(event, p1.getColor(), tile, "1 cruiser", game);
                     successMessage = successMessage + "Produced 1 " + Emojis.cruiser + " in tile "
@@ -580,7 +579,7 @@ public class ComponentActionHelper {
 
         // SPECIFIC HANDLING //TODO: Move this shite to RelicPurge
         switch (relicID) {
-            case "enigmaticdevice" -> ButtonHelperActionCards.resolveResearch(game, player, relicID, event);
+            case "enigmaticdevice" -> ButtonHelperActionCards.resolveResearch(game, player, event);
             case "codex", "absol_codex" -> ButtonHelper.offerCodexButtons(player, game, event);
             case "nanoforge", "absol_nanoforge", "baldrick_nanoforge" -> ButtonHelper.offerNanoforgeButtons(player, game, event);
             case "decrypted_cartoglyph" -> DrawBlueBackTile.drawBlueBackTiles(event, game, player, 3);
